--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.8.1",
     "@notionhq/client": "^5.9.0",
-    "framer-motion": "^12.34.0",
+    "motion": "^12.34.1",
     "negotiator": "^1.0.0",
     "next": "16.1.6",
     "react": "19.2.3",
