--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.8.1",
     "@notionhq/client": "^5.9.0",
+    "lenis": "^1.3.17",
     "motion": "^12.34.1",
     "negotiator": "^1.0.0",
     "next": "16.1.6",
