--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "format": "prettier --write ."
+    "format": "prettier --write '**/*.{ts,tsx,js,jsx,md,json,css}'"
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.8.1",
